changed app to application

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<p>Click on the button to open the app</p>
+<p>Click on the button to open the application!</p>
 
 <p>Open a new window, and resize the width and height to 500px:</p>
 
